Fix width overflow on mobile device in section columns

--- a/sass/components/sections/_section-columns-with-icon-and-text.scss
+++ b/sass/components/sections/_section-columns-with-icon-and-text.scss
@@ -34,6 +34,7 @@
 
 		.section-cols {
 			flex-wrap: wrap;
+			margin: 0;
 		}
 
 		.section__col {
